# valuemaxx

./: .coveragerc  .dockerignore  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.yml  llms.txt  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  release.yml
apps/agent_integrability/: pyproject.toml
apps/agent_integrability/src/atm_agent_integrability/: __init__.py
apps/agent_integrability/src/valuemaxx/agent_integrability/: __init__.py  agents_md_writer.py  discovery.py  llms_txt.py  scaffold_caps.py
apps/agent_integrability/src/valuemaxx/agent_integrability/examples/anthropic/: app.py  outcomes.yaml
apps/agent_integrability/src/valuemaxx/agent_integrability/examples/fastapi_langchain/: app.py  outcomes.yaml
apps/agent_integrability/src/valuemaxx/agent_integrability/examples/openai/: app.py  outcomes.yaml
apps/agent_integrability/src/valuemaxx/agent_integrability/skill/: SKILL.md
apps/agent_integrability/tests/: conftest.py  test_agents_md_writer.py  test_discovery.py  test_examples.py  test_llms_txt.py  test_scaffold_caps.py  test_skill.py
apps/api/: pyproject.toml
apps/api/src/atm_api/: __init__.py
apps/api/src/valuemaxx/api/: __init__.py  app.py  auth.py  errors.py  jobs.py  mcp_route.py  projection.py  webhooks.py
apps/api/tests/: _api_helpers.py  conftest.py  test_app.py  test_auth.py  test_lifespan.py  test_mcp_route.py
apps/cli/: pyproject.toml
apps/cli/src/atm_cli/: __init__.py
apps/cli/src/valuemaxx/cli/: __init__.py  _entry.py  main.py  projection.py  render.py
apps/cli/tests/: _cli_helpers.py  conftest.py  test_base_install.py  test_entry.py  test_main.py  test_render.py
apps/mcp/: pyproject.toml
apps/mcp/src/atm_mcp/: __init__.py
apps/mcp/src/valuemaxx/mcp/: __init__.py  projection.py  server.py
apps/mcp/tests/: conftest.py  test_projection.py  test_server.py
apps/notify/: pyproject.toml
apps/notify/src/atm_notify/: __init__.py
apps/notify/src/valuemaxx/notify/: __init__.py  builder.py  correction.py  models.py  register.py
apps/notify/src/valuemaxx/notify/sinks/: __init__.py  _lines.py  email.py  slack.py
apps/notify/tests/: conftest.py  test_builder.py  test_correction.py  test_denylist_guard.py  test_models.py  test_register.py  test_sinks.py
apps/server/: pyproject.toml
apps/server/src/valuemaxx/server/: __init__.py  __main__.py  app.py  settings.py  store_bridge.py
apps/server/tests/: _server_helpers.py  conftest.py  test_create_app.py  test_e2e.py  test_main.py  test_rollup_integration.py  test_store_bridge.py  test_zero_config_dev_key.py
docs/followups/: eval-candidate-discovery.md
docs/onboarding/: PROMPTS.md  SKILL.md
docs/plans/: 2026-06-27-ai-margin-intelligence-design.md  2026-06-27-coordinator-build-plan.md
scripts/: _g0g1_plan_excerpt.md  bundle_for_release.py  generate_llms_txt.py  release.sh  stamp_version.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/atm_margin/: __init__.py
sdks/python/src/valuemaxx/sdk/: __init__.py  _bootstrap.py  config.py  scaffold.py  track.py
sdks/python/tests/: test_init.py  test_init_run_id_carry.py  test_scaffold.py  test_track.py
sdks/python/tests/e2e/: test_init_to_cost_event.py
sdks/typescript/: .gitignore  .npmignore  .prettierignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdks/typescript/src/: baggage.ts  bin.ts  config.ts  emit.ts  index.ts  init.ts  injection.ts  instrumentation.ts  observation.ts  run.ts  selftest.ts  semconv.ts  terminal.ts  tokens.ts
sdks/typescript/src/onboarding/: cli.ts  diff.ts  onboard.ts  onboarding_rules.json  propose.ts  redact.ts  render.ts  scan.ts  types.ts
sdks/typescript/test/: baggage-parity.test.ts  baggage.test.ts  config.test.ts  gemini.test.ts  init-run-id-carry.test.ts  init.test.ts  injection.test.ts  onboarding-parity.test.ts  onboarding-scan.test.ts  run.test.ts  selftest.test.ts  semconv-parity.test.ts  terminal.test.ts  tokens.test.ts
tests/conformance/: astutil.py  loader.py  rulebase.py  test_attribution_rules.py  test_meta.py  test_reconciliation_rules.py  test_run_id_wire_rule.py  test_surface_mask.py
tests/conformance/behavioral/: rule_honesty_axes_invariants.py  rule_no_secret_logging.py  rule_otlp_collector_wire_roundtrips.py  rule_sdk_fails_open.py
tests/conformance/static/: rule_additive_reconciliation.py  rule_candidate_likely_never_billing_grade.py  rule_capability_on_every_declared_surface.py  rule_dependency_direction.py  rule_grade_cap_invariant.py  rule_granularity_labeled.py  rule_honesty_provenance_set.py  rule_migration_no_autogen_drift.py  rule_no_auto_switch.py  rule_no_eval_in_predicate.py  rule_no_logic_to_surface_import.py  rule_no_raw_source_exfil.py  rule_no_tiktoken_for_cost.py  rule_no_type_outside_core.py  rule_no_user_override_of_confidence_mapping.py  rule_notify_aggregate_only.py  rule_resolver_emits_only_its_own_tier.py  rule_rollup_carries_confidence.py  rule_run_id_wire_parity.py  rule_sdk_ingest_not_signature_gated.py  rule_signal_class_never_user_set.py  rule_smoke_no_ci_confirm_requires_ci.py  rule_streaming_no_delta_sum.py  rule_tenant_scoping.py  rule_two_phase_gate_ordered.py  rule_wire_semconv_parity.py
tests/e2e/: test_install_run_see_it_work.py  test_otlp_collector_wire.py  test_sdk_key_auth_ingest.py
tests/tooling/: test_workspace_layout.py
tests/wire_contract/: __init__.py  baggage_parity_golden.json  generate_baggage_parity_golden.py  generate_onboarding_golden.py  generate_onboarding_rules_fixture.py  generate_run_id_wire_fixture.py  generate_semconv_fixture.py  onboarding_golden.json  onboarding_rules.json  run_id_wire.json  semconv_keys.json  test_baggage_parity.py
tests/wire_contract/onboarding_fixture/src/: agent.ts
