[project]
name = "atm-margin-workspace"
version = "0.0.0"
description = "AI Margin Intelligence — cost-per-outcome with confidence, for teams that build AI agents"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"

# This is a uv workspace root. Individual packages live under packages/, apps/, sdks/python.
[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
    "sdks/python",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "testcontainers[postgres]>=4,<5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps", "sdks/python", "tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["packages"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    # projection / generated code excluded from the core coverage gate (AGENTS.md §5)
    "apps/*",
    "*/_generated/*",
]

[tool.coverage.report]
# Core logic packages must hold >=90% line+branch (AGENTS.md §5).
fail_under = 90
show_missing = true
skip_covered = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
