[project]
name = "valuemaxx-workspace"
version = "0.0.0"
description = "AI Margin Intelligence — cost-per-outcome with confidence, for teams that build AI agents"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"

# This is a uv workspace root. Individual packages live under packages/, apps/, sdks/python.
[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
    "sdks/python",
]

[tool.uv]
# The workspace root is a virtual project — it ships no code of its own, only
# aggregates the members below. Building it as a wheel must not be attempted.
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "testcontainers[postgres]>=4,<5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps", "sdks/python", "tests"]
# importlib import mode: each package ships its own `tests/` dir, so the legacy
# prepend mode would collide many same-named `tests` packages on sys.path.
# importlib gives every test module a unique, path-derived module name.
addopts = "--strict-markers --strict-config --import-mode=importlib"
consider_namespace_packages = true
markers = [
    "conformance: a conformance rule test (institutional memory; blocks merge)",
    "behavioral: a runtime, sentinel-driven conformance rule (needs runtime fixtures)",
    "static: a static AST / import-graph conformance rule (no runtime needed)",
]
filterwarnings = [
    # Starlette's TestClient warns that pairing httpx with it is deprecated; this is
    # a third-party deprecation from FastAPI's own re-export, outside our control.
    "ignore:Using `httpx` with `starlette.testclient`",
]

# Coverage configuration lives in .coveragerc (the single source for the gate),
# scoped to the core typed spine (valuemaxx.core/valuemaxx.capabilities). See AGENTS.md §5.
