[project]
name = "valuemaxx-api"
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
description = "AI Margin Intelligence — FastAPI projection of the capability registry (routes per mode; tenant from the API key)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "valuemaxx-core",
    "valuemaxx-capabilities",
    "valuemaxx-agent-integrability",
    "valuemaxx-mcp",
    "fastapi>=0.110",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/valuemaxx/api"]
sources = ["src"]

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capabilities = { workspace = true }
valuemaxx-agent-integrability = { workspace = true }
valuemaxx-mcp = { workspace = true }
