[project]
name = "valuemaxx-cli"
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
description = "AI Margin Intelligence — the `valuemaxx` CLI (thin registry projection + init/up/onboard)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "valuemaxx-core",
    "valuemaxx-capabilities",
    "valuemaxx-agent-integrability",
    "typer>=0.12",
]

[project.scripts]
valuemaxx = "valuemaxx.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/valuemaxx/cli"]
sources = ["src"]

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capabilities = { workspace = true }
valuemaxx-agent-integrability = { workspace = true }
