[project]
name = "valuemaxx-cli"
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
description = "AI Margin Intelligence — the `valuemaxx` CLI (thin registry projection + init/up/onboard)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "valuemaxx-core",
    "valuemaxx-capabilities",
    "valuemaxx-agent-integrability",
    "valuemaxx-onboarding",
    "valuemaxx-server",
    "valuemaxx",
    "typer>=0.12",
    "uvicorn>=0.29",
]

[project.scripts]
valuemaxx = "valuemaxx.cli._entry:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/valuemaxx/cli"]
sources = ["src"]

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capabilities = { workspace = true }
valuemaxx-agent-integrability = { workspace = true }
valuemaxx-onboarding = { workspace = true }
valuemaxx-server = { workspace = true }
valuemaxx = { workspace = true }
