[project]
name = "valuemaxx-mcp"
version = "0.0.0"
description = "AI Margin Intelligence — MCP server (thin projection: each MCP capability -> a tool with generated inputSchema)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "valuemaxx-core",
    "valuemaxx-capabilities",
    "valuemaxx-agent-integrability",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/valuemaxx/mcp"]
sources = ["src"]

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capabilities = { workspace = true }
valuemaxx-agent-integrability = { workspace = true }
