[project]
name = "atm-notify"
version = "0.0.0"
description = "AI Margin Intelligence — notify surface (thin registry projection; built in G4)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "atm-core",
    "atm-capabilities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atm_notify"]

[tool.uv.sources]
atm-core = { workspace = true }
atm-capabilities = { workspace = true }
