[project]
name = "valuemaxx-notify"
version = "0.0.0"
description = "AI Margin Intelligence — notify surface (thin registry projection; built in G4)."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "valuemaxx-core",
    "valuemaxx-capabilities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/valuemaxx/notify"]
sources = ["src"]

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capabilities = { workspace = true }
