[project]
name = "valuemaxx"
version = "0.0.0"
description = "AI Margin Intelligence — Python SDK + optional CLI/backend. One-line init() that fails open."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
# Base install = the SDK: init() + capture. pydantic/wrapt are the SDK's only runtime
# deps. The CLI/backend code is BUNDLED in the wheel (see force-include below) but its
# heavy third-party deps are opt-in extras, so `pip install valuemaxx` stays thin.
dependencies = [
    "pydantic>=2",
    "wrapt>=1.16",
]

[project.optional-dependencies]
# `pip install valuemaxx[cli]` adds the `valuemaxx` command (up / init / onboard /
# queries) — the full local backend. These are the third-party deps the bundled
# valuemaxx.{cli,server,api,store,onboarding,...} modules need; the valuemaxx code is
# already in the wheel.
cli = [
    "typer>=0.12",
    "uvicorn>=0.29",
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2,<3",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "anyio>=4",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "pyyaml>=6",
    "typing-extensions>=4.12",
]
# `[server]` is the headless backend (FastAPI app + store) without the typer CLI — for
# running `valuemaxx.server.app:app` under your own ASGI server. A subset of `[cli]`.
server = [
    "uvicorn>=0.29",
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2,<3",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "anyio>=4",
    "pyyaml>=6",
    "typing-extensions>=4.12",
]

[project.scripts]
# Present once `[cli]` is installed (the command imports valuemaxx.cli, which needs the
# cli extra's deps). The module is always in the wheel; the deps gate whether it runs.
valuemaxx = "valuemaxx.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The base module shipped from THIS package's own src tree.
only-include = ["src/valuemaxx/sdk"]
sources = ["src"]

# Bundle every other valuemaxx.* module from its sibling workspace package into this
# single wheel, so `pip install valuemaxx` yields one self-contained distribution and
# `[cli]` just toggles the third-party deps. Code is cheap; one wheel beats publishing
# ~15 internal packages as separate, individually-versioned public APIs.
[tool.hatch.build.targets.wheel.force-include]
"../../packages/core/src/valuemaxx/core" = "valuemaxx/core"
"../../packages/capabilities/src/valuemaxx/capabilities" = "valuemaxx/capabilities"
"../../packages/capture/src/valuemaxx/capture" = "valuemaxx/capture"
"../../packages/outcomes/src/valuemaxx/outcomes" = "valuemaxx/outcomes"
"../../packages/attribution/src/valuemaxx/attribution" = "valuemaxx/attribution"
"../../packages/reconciliation/src/valuemaxx/reconciliation" = "valuemaxx/reconciliation"
"../../packages/allocation/src/valuemaxx/allocation" = "valuemaxx/allocation"
"../../packages/metrics/src/valuemaxx/metrics" = "valuemaxx/metrics"
"../../packages/eval/src/valuemaxx/eval" = "valuemaxx/eval"
"../../packages/onboarding/src/valuemaxx/onboarding" = "valuemaxx/onboarding"
"../../packages/store/src/valuemaxx/store" = "valuemaxx/store"
"../../apps/agent_integrability/src/valuemaxx/agent_integrability" = "valuemaxx/agent_integrability"
"../../apps/api/src/valuemaxx/api" = "valuemaxx/api"
"../../apps/mcp/src/valuemaxx/mcp" = "valuemaxx/mcp"
"../../apps/notify/src/valuemaxx/notify" = "valuemaxx/notify"
"../../apps/server/src/valuemaxx/server" = "valuemaxx/server"
"../../apps/cli/src/valuemaxx/cli" = "valuemaxx/cli"

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capture = { workspace = true }

[dependency-groups]
# httpx is TEST-ONLY: the e2e proves init() -> CostEvent over a real injected
# httpx-shaped transport, and that an unrelated httpx.Client is untouched (H1).
dev = [
    "httpx>=0.27",
    "typing-extensions>=4.12",
]
