[project]
name = "valuemaxx"
version = "0.1.0"
description = "AI Margin Intelligence — Python SDK + optional CLI/backend. One-line init() that fails open."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
# Base install = the SDK (init() + capture) AND the `valuemaxx` command with `init` +
# `onboard`. Onboarding only needs a light scanner (tree-sitter) + yaml + typer, so it ships
# in the base — `pip install valuemaxx` gives you `valuemaxx onboard`, symmetric with
# `npm install valuemaxx`. The heavy BACKEND (`up`, the query commands) is the `[cli]` extra.
dependencies = [
    "pydantic>=2",
    "wrapt>=1.16",
    # CLI + onboarding (light): the `valuemaxx` command, the TS/JS + Python scanner, YAML render.
    "typer>=0.12",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "pyyaml>=6",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
# `pip install valuemaxx[cli]` adds the BACKEND: `valuemaxx up` + the query commands (the full
# FastAPI assembly + store). The valuemaxx code is already bundled in the wheel; these are its
# heavy third-party deps. (`onboard`/`init` work without this — they're in the base install.)
cli = [
    "uvicorn>=0.29",
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2,<3",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # asyncpg is the async runtime driver; psycopg2 is the SYNC driver alembic's migration
    # runner needs (Postgres-backed setups). Without it, startup migrations against Postgres
    # fail with ModuleNotFoundError: psycopg2. (Harmless for the default SQLite path.)
    "psycopg2-binary>=2.9",
    "aiosqlite>=0.20",
    "anyio>=4",
]
# `[server]` is the headless backend (FastAPI app + store) without the typer CLI — for
# running `valuemaxx.server.app:app` under your own ASGI server. A subset of `[cli]`.
server = [
    "uvicorn>=0.29",
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2,<3",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",  # sync driver for alembic migrations (see [cli] note)
    "aiosqlite>=0.20",
    "anyio>=4",
    "pyyaml>=6",
    "typing-extensions>=4.12",
]

[project.scripts]
# Present once `[cli]` is installed (the command imports valuemaxx.cli, which needs the
# cli extra's deps). The module is always in the wheel; the deps gate whether it runs.
valuemaxx = "valuemaxx.cli._entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# DEV: ship only this package's own valuemaxx.sdk, so the workspace editable install is
# clean and `import valuemaxx.server` (etc.) resolves to the LIVE sibling editable
# packages (valuemaxx-server -> apps/server, …) — not a frozen force-include copy that
# would shadow them. The PUBLISHED wheel bundles every valuemaxx.* module; that bundling
# is injected at release time by `scripts/bundle_for_release.py` (run before `uv build`
# in the release workflow), so a brand-new user gets one self-contained `valuemaxx` wheel
# while developers keep live-editable sources. (Mechanism: force-include leaks into uv's
# editable install and copies static snapshots — hence release-only, never in dev.)
only-include = ["src/valuemaxx/sdk"]
sources = ["src"]

[tool.uv.sources]
valuemaxx-core = { workspace = true }
valuemaxx-capture = { workspace = true }

[dependency-groups]
# httpx is TEST-ONLY: the e2e proves init() -> CostEvent over a real injected
# httpx-shaped transport, and that an unrelated httpx.Client is untouched (H1).
dev = [
    "httpx>=0.27",
    "typing-extensions>=4.12",
]
